@@ -12,3 +12,5 @@ $conf['var_programname']['dns'] = 'named';
 $conf['var_programname']['mysql'] = 'mysqld';
 $conf['var_programuser']['dns'] = 'named';
 
+// Set to off to turn off
+$conf['var_programname']['stats'] = 'yes';
